tests/NormalTests/paczka2/big_fuzzy/94437678.err
Error in line 6: 2XwQ0 S917 13,9
Error in line 8: j7ZRryYMM S486 17,6
Error in line 22: cMnLTupvRh S207 51,2
Error in line 18: S917 S917 20,3
Error in line 25: 8o5wMCuafTo S486 42,5
Error in line 19: 0A7F1f S207 49,2
Error in line 37: 0A7F1f S917 -1,2
Error in line 27: S917 S486 69,5
Error in line 38: S917 S207 95,4
Error in line 29: 0A7F1f S917 16,0
Error in line 40: S917 S37 17,0
Error in line 54: j7ZRryYMM S486 46,9
Error in line 49: 0A7F1f S37 82,8
Error in line 55: j7ZRryYMM S207 43,1
Error in line 60: j7ZRryYMM S486 69,5
Error in line 70: S917 S486 26,3
Error in line 74: 2XwQ0 S207 98,78
Error in line 76: 1w5dqhE S486 73,86
Error in line 78: S917 S917 37,1
Error in line 72: cMnLTupvRh S207 16,0
Error in line 79: S917 S37 22,6
Error in line 84: S917 S207 77,5
Error in line 89: 8o5wMCuafTo S207 3,9
Error in line 100: 8o5wMCuafTo S207 74,7
Error in line 102: 2XwQ0 S486 -2,5
Error in line 91: 1w5dqhE S486 139,8
Error in line 101: 8o5wMCuafTo S917 43,7
Error in line 103: cMnLTupvRh S37 763,9
Error in line 115: S917 S207 75,6
Error in line 81: 2XwQ0 S486 36,4
Error in line 136: 1w5dqhE S917 47,7
Error in line 131: 2XwQ0 S207 78,7
Error in line 144: j7ZRryYMM S486 59,99
Error in line 148: 8o5wMCuafTo S917 97,1
Error in line 150: j7ZRryYMM S486 151,5
Error in line 156: 8o5wMCuafTo S207 29,4
Error in line 157: 2XwQ0 S917 10,5
Error in line 194: 8o5wMCuafTo S37 85,7
Error in line 195: 8o5wMCuafTo S486 31,5
Error in line 192: cMnLTupvRh S207 60,6
Error in line 197: j7ZRryYMM S486 70,8
Error in line 204: j7ZRryYMM S207 90,2
Error in line 210: S917 S486 50,3
Error in line 215: cMnLTupvRh S37 91,1
Error in line 225: 1w5dqhE S917 77,2
Error in line 246: ,w5dqhE S37 5,4
